# vc

./: LICENSE  README.md  pyproject.toml
benches/results/data/: final-degree-prover.txt  final-degree-verifier.txt  folding-factor-prover.txt  folding-factor-verifier.txt  initial-degree-degrees.txt  initial-degree-prover.txt  initial-degree-verifier.txt
benches/vc/: final_degree.py  folding_factor.py  folding_factor_1.py  initial_degree.py
src/vc/: base.py  constants.py  domain.py  fold.py  logging.py  merkle.py  options.py  parameters.py  polynomial.py  proof.py  prover.py  sponge.py  verifier.py
src/vc/cli/: fri.py  main.py  stark.py
src/vc/cli/airs/: fibonacci.py
src/vc/fri/: fold.py  parameters.py  proof.py  prover.py  verifier.py
src/vc/stark/: boundary.py  parameters.py  proof.py  prover.py  verifier.py
src/vc/stark/airs/: counter.py  factorial.py  fibonacci.py
tests/vc/: test_base.py  test_fold.py  test_merkle.py  test_polynomial.py  test_sponge.py
tests/vc/fri/: test_fold.py  test_fri.py
tests/vc/stark/: test_stark.py
tests/vc/stark/airs/: test_fibonacci.py
