[project]
name = "vc"
version = "0.0.1"
description = "Library with tools to study verifiable computations and STARKs in particular."
authors = [
    { name = "Vladlen Afonin" }
]
requires-python = ">= 3.8"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
readme = { file = "README.md", content-type = "text/markdown"}
keywords = [
    "stark",
    "fri",
    "interactive proofs",
    "verifiable computations",
    "algorithms"
]
dependencies = [
    "galois",
    "numpy",
    "pymerkle"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security :: Cryptography"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
vc = "vc.cli.main:main"
