[project]
name = "vc"
version = "0.0.1"
description = "Library with tools to study verifiable computations and STARKs in particular."
authors = [
    { name = "Vladlen Afonin" }
]
requires-python = ">= 3.8"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
readme = { file = "README.md", content-type = "text/markdown"}
keywords = [
    "stark",
    "fri",
    "interactive proofs",
    "verifiable computations",
    "algorithms"
]
dependencies = [
    "galois",
    "numpy",
    "pymerkle",
    "numba"
]
classifiers = [
    "Development Status :: 1 - Planning",

    "Environment :: Console",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Topic :: Security :: Cryptography",

    "Typing :: Typed"
]

[project.optional-dependencies]
test = [
    "pytest"
]
bench = [
    "matplotlib",
    "tqdm"
]

[project.scripts]
vc = "vc.cli.main:main"
